# weka

./: README.md
cardano-client/: build.gradle  settings.gradle
cardano-client/src/main/java/com/cardanoclient/cardanoclient/: CardanoClientApplication.java
cardano-client/src/test/java/com/cardanoclient/cardanoclient/: CardanoClientApplicationTests.java
fileserver/: .gitignore  Cargo.toml  README.md
fileserver/src/: constants.rs  main.rs  server.rs
fileserver/src/server/: file_ops.rs  mod.rs
