[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
futures = "0.3.25"
libp2p = {version = "0.50.0", features = ["tcp", "dns", "async-std", "websocket", "ping", "noise", "mplex", "yamux"] }
libp2p-swarm = "0.41.1"
libp2p-swarm-derive = "0.31.0"