[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
log = "0.4.17"
log4rs = "1.2.0"
futures = "0.3.25"
libp2p = {version = "0.50.0", features = ["tcp", "dns", "async-std", "websocket", "ping", "noise", "mplex", "yamux"] }
libp2p-swarm = "0.41.1"
libp2p-swarm-derive = "0.31.0"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}